--- a/proyectoDjango/primeraApp/templates/primeraApp.html
+++ b/proyectoDjango/primeraApp/templates/primeraApp.html
@@ -1,1 +1,14 @@
-<p>hola</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PRuebas</title>
+    <ul>
+      {% for element in lista_carros %}
+      <li>{{element.titulo}}</li>
+      {% endfor %}
+    </ul>
+  </head>
+  <body></body>
+</html>
